testing/errors/alreadydefined2.a
	a = 3
	a = 4	; -> "already defined" (value has changed)
